--- a/src/index.css
+++ b/src/index.css
@@ -14,56 +14,30 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
+  padding: 0;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.desk, .tab, .mob {
+  width: 100%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@media (max-width: 640px) {
+  .desk , .tab {
+    display: none;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@media (min-width: 641px) and (max-width: 1007px) {
+  .mob , .desk {
+    display: none;
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+@media (min-width: 1008px) {
+  .mob , .tab {
+    display: none;
   }
 }
