--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,9 @@
   scroll-behavior: smooth;
 }
 
-.desk, .tab, .mob {
+.banner img {
   width: 100%;
+  height: auto;
 }
 
 @media (max-width: 640px) {
