--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -171,3 +171,33 @@
         padding: 80px 10px;
     }
 }
+
+@media (max-width: 640px) {
+    .body-hp {
+        background-image: url('/src/assets/home/background-home-mobile.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
+        width: 100%;
+    }
+}
+  
+@media (min-width: 641px) and (max-width: 1007px) {
+    .body-hp {
+        background-image: url('/src/assets/home/background-home-tablet.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
+        width: 100vw;
+    }
+}
+  
+@media (min-width: 1008px) {
+    .body-hp {
+        background-image: url('/src/assets/home/background-home-desktop.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
+        width: 100vw;
+    }
+}
