--- a/src/styles/destination.css
+++ b/src/styles/destination.css
@@ -4,10 +4,78 @@
 }
 
 .body-dp {
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 100px 10px 0 10px;
+}
+
+.headline {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 18px;
+    color: #FFFFFF;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.img-cont {
+    padding: 30px 60px 30px 60px;
+}
+
+.imgsrc {
+    height: auto;
+    width: 100%;
+    max-width: 500px;
+}
+
+.navs {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 18px;
+    letter-spacing: 2px;
+    color: #D0D6F9;
+    text-transform: uppercase;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.title {
+    font-family: 'Bellefair', serif;
+    font-size: 70px;
+    color: #FFFFFF;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.description {
+    text-align: center;
+    color: #D0D6F9;
+    margin-bottom: 30px;
+}
+
+.distance-time {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 15px;
+    text-transform: uppercase;
+    padding: 50px;
+}
+
+.distance-time > div > h3 {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 15px;
+    letter-spacing: 3px;
+    text-align: center;
+    color: #D0D6F9;
+}
+
+.distance-time > div > h2 {
+    font-family: 'Bellefair', serif;
+    text-align: center;
+    color: #FFFFFF;
 }
 
 @media (max-width: 640px) {
@@ -15,27 +83,24 @@
       background-image: url('/src/assets/destination/background-destination-mobile.jpg');
       background-repeat: no-repeat;
       background-size: cover;
-      height: 100vh;
       width: 100%;
     }
-  }
+}
   
-  @media (min-width: 641px) and (max-width: 1007px) {
+@media (min-width: 641px) and (max-width: 1007px) {
     .body-dp {
       background-image: url('/src/assets/destination/background-destination-tablet.jpg');
       background-repeat: no-repeat;
       background-size: cover;
-      height: 100vh;
       width: 100vw;
     }
-  }
+}
   
-  @media (min-width: 1008px) {
+@media (min-width: 1008px) {
     .body-dp {
       background-image: url('/src/assets/destination/background-destination-desktop.jpg');
       background-repeat: no-repeat;
       background-size: cover;
-      height: 100vh;
       width: 100vw;
     }
-  }
+}
