--- a/src/styles/destination.css
+++ b/src/styles/destination.css
@@ -21,12 +21,15 @@
 
 .img-cont {
     padding: 30px 60px 30px 60px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .imgsrc {
     height: auto;
     width: 100%;
-    max-width: 500px;
 }
 
 .navs {
@@ -36,6 +39,7 @@
     color: #D0D6F9;
     text-transform: uppercase;
     justify-content: center;
+    gap: 20px;
     margin-bottom: 10px;
 }
 
@@ -80,10 +84,10 @@
 
 @media (max-width: 640px) {
     .body-dp {
-      background-image: url('/src/assets/destination/background-destination-mobile.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      width: 100%;
+        background-image: url('/src/assets/destination/background-destination-mobile.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
     }
 }
   
@@ -93,6 +97,30 @@
       background-repeat: no-repeat;
       background-size: cover;
       width: 100vw;
+    }
+    .headline {
+        text-align: left;
+        margin-top: 40px;
+        padding-left: 20px;
+        font-size: 20px;
+    }
+    .imgsrc {
+        min-width: 300px;
+        max-width: 300px;
+    }
+    .img-cont {
+        padding: 30px 150px 30px 150px;
+    }
+    .dest-cont {
+        padding: 0 80px;
+    }
+    .distance-time {
+        flex-direction: row;
+        gap: 70px;
+    }
+    .navs {
+        gap: 30px;
+        font-size: 22px;
     }
 }
   
