--- a/src/styles/destination.css
+++ b/src/styles/destination.css
@@ -43,6 +43,7 @@
     justify-content: center;
     gap: 20px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .title {
@@ -128,9 +129,43 @@
   
 @media (min-width: 1008px) {
     .body-dp {
-      background-image: url('/src/assets/destination/background-destination-desktop.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      width: 100vw;
+        background-image: url('/src/assets/destination/background-destination-desktop.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100vw;
+    }
+    .headline {
+        text-align: start;
+        margin-top: 100px;
+        margin-left: 100px;
+        font-size: 25px;
+    }
+    .dest-cont {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
+    }
+    .dest-desc {
+        width: 500px;
+    }
+    .imgsrc {
+        min-width: 350px;
+        max-width: 350px;
+    }
+    .navs {
+        justify-content: start;
+    }
+    .title, .description {
+        text-align: start;
+    }
+    .distance-time {
+        flex-direction: row;
+        justify-content: start;
+        gap: 70px;
+        padding: 50px 0;
+    }
+    .distance-time > div > h3, .distance-time > div > h2 { 
+        text-align: start;
     }
 }
