--- a/src/styles/destination.css
+++ b/src/styles/destination.css
@@ -46,6 +46,17 @@
     cursor: pointer;
 }
 
+.active {
+    color: #FFFFFF;
+    border-bottom: 3px solid white;
+}
+
+.navs div:hover {
+    border-bottom: 3px solid rgb(102, 102, 102);
+    padding: 0;
+    margin: 0;    
+}
+
 .title {
     font-family: 'Bellefair', serif;
     font-size: 70px;
