--- a/src/styles/crew.css
+++ b/src/styles/crew.css
@@ -1,9 +1,61 @@
+.container {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.image-cont {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.crew-image {
+    height: auto;
+    width: 100%;
+    min-width: 150px;
+    max-width: 180px;
+}
+
+.navs {
+    display: flex;
+    padding: 20px 0;
+}
+
+.nav {
+    height: 15px;
+    width: 15px;
+    background-color: gray;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.role {
+    font-family: 'Bellefair', serif;
+    font-size: 18px;
+    color: gray;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.name {
+    font-family: 'Bellefair', serif;
+    font-size: 25px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.about {
+    font-size: 16px;
+    color: #D0D6F9;
+    text-align: center;
+    margin-top: 15px;
+}
+
 @media (max-width: 640px) {
     .body-crew {
         background-image: url('/src/assets/crew/background-crew-mobile.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100vh;
         width: 100%;
     }
 }
@@ -13,7 +65,6 @@
         background-image: url('/src/assets/crew/background-crew-tablet.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100vh;
         width: 100%;
     }
 }
@@ -23,7 +74,6 @@
         background-image: url('/src/assets/crew/background-crew-desktop.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100vh;
         width: 100%;
     }
 }
