--- a/src/styles/technology.css
+++ b/src/styles/technology.css
@@ -1,3 +1,13 @@
+.tech-headline {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 18px;
+    color: #FFFFFF;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 100px;
+}
+
 @media (max-width: 640px) {
     .body-tech {
         background-image: url('/src/assets/technology/background-technology-mobile.jpg');
