--- a/src/styles/technology.css
+++ b/src/styles/technology.css
@@ -8,12 +8,68 @@
     padding-top: 100px;
 }
 
+.tech-img-cont {
+    margin: 30px 0;
+}
+
+.tech-image {
+    height: auto;
+    width: 100%;
+}
+
+.tech-navs {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+
+.tech-nav {
+    border: 1px solid #FFFFFF;
+    border-radius: 50%;
+    padding: 5px 14px;
+    color: #FFFFFF;
+}
+
+.tech-nav-active {
+    color: black;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    padding: 5px 14px;
+}
+
+.tech-dets {
+    text-align: center;
+}
+
+.terminology {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #D0D6F9;
+    margin-bottom: 3px;
+}
+
+.tech-name {
+    font-family: 'Bellefair', serif;
+    font-size: 28px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #FFFFFF;
+}
+
+.tech-about {
+    font-size: 16px;
+    color: #D0D6F9;
+    padding: 30px 0;
+}
+
 @media (max-width: 640px) {
     .body-tech {
         background-image: url('/src/assets/technology/background-technology-mobile.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100vh;
         width: 100vw;
     }
 }
