--- a/src/styles/technology.css
+++ b/src/styles/technology.css
@@ -78,8 +78,15 @@
         background-image: url('/src/assets/technology/background-technology-tablet.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100vh;
         width: 100vw;
+    }
+    .tech-headline {
+        text-align: start;
+        padding: 140px 0 10px 30px;
+        font-size: 20px;
+    }
+    .tech-about {
+        padding: 30px 150px;
     }
 }
 @media (min-width: 1008px) {
