--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,25 +5,33 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* position: fixed; */
     position: absolute;
     width: 100%;
-    padding-left: 50px;
+    padding: 20px 15px;
 }
 
 .offcanvas {
-    background-color: #464957;
+    background: rgba(46, 52, 90, 0.164);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(12.5px);
+    -webkit-backdrop-filter: blur(12.5px);
+}
+
+.offcanvas-header {
+    display: flex;
+    justify-content: end;
+    padding: 0;
 }
 
 .navbar {
-    background-color: #464957b7;
-    margin: 50px 0;
-    padding: 25px 150px 15px 70px;
+    background-color: transparent;
 }
 
 .navbar ul {
     display: flex;
+    flex-direction: column;
     gap: 50px;
+    padding: 10px 0 0 20px;
 }
 
 .navbar ul li {
@@ -34,46 +42,76 @@
     text-decoration: none;
     text-transform: uppercase;
     font-size: 18px;
-    letter-spacing: 2px;
-    color: white;
+    letter-spacing: 3px;
+    color: gainsboro;
+    font-weight: lighter;
     font-family: 'Barlow Condensed', sans-serif;
 }
 
+.nav-num {
+    font-weight: 900;
+    font-size: 18px;
+    margin-right: 7px;
+}
+
+.close-btn {
+    background-color: transparent;
+    color: #ffffff;
+    font-size: 40px;
+    padding: 10px 25px;
+    border: none;
+}
+
+.active-navbar {
+    padding-bottom: 30px;
+    border-bottom: 3px solid white;
+}
 
 @media (max-width: 640px) {
     .tab-desk {
         display: none;
     }
-    .header{
-        padding: 20px 15px;
-    }
-    .navbar {
-        background-color: transparent;
-        margin: 10px 0;
-        margin: 0;
-        padding: 0;
-    }
-    .navbar ul {
-        flex-direction: column;
-        align-items: self-start;
-    }
 }
   
 @media (min-width: 641px) and (max-width: 1007px) {
-    .mob {
+    .mob, .navbar ul li span {
         display: none;
     }
+    .header {
+        padding: 0;
+    }
     .navbar {
-        margin: 0;
-        padding: 35px 15px 15px 10px;
+        background: rgba(46, 52, 90, 0.164);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(12.5px);
+        -webkit-backdrop-filter: blur(12.5px);
+        padding: 40px 30px 0 40px;
     }
     .navbar ul {
+        flex-direction: row;
+        padding: 0;
+        margin: 0;
         gap: 30px;
+    }
+    .navbar ul li {
+        padding-bottom: 30px;
     }
 }
   
 @media (min-width: 1008px) {
     .mob , .tab {
+        display: none;
+    }
+    .navbar {
+        background-color: rgba(208, 214, 249, 0.22);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(12.5px);
+        -webkit-backdrop-filter: blur(12.5px);
+    }
+    .navbar ul {
+        gap: 0px;
+    }
+    .nav-num {
         display: none;
     }
 }
