--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -78,14 +78,14 @@
         display: none;
     }
     .header {
-        padding: 0;
+        padding: 0 0 0 30px;
     }
     .navbar {
         background: rgba(46, 52, 90, 0.164);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(12.5px);
         -webkit-backdrop-filter: blur(12.5px);
-        padding: 40px 30px 0 40px;
+        padding: 40px 40px 0 40px;
     }
     .navbar ul {
         flex-direction: row;
