--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -99,19 +99,34 @@
 }
   
 @media (min-width: 1008px) {
-    .mob , .tab {
+    .mob {
         display: none;
+    }
+    .header {
+        padding: 30px 0 0 30px;
     }
     .navbar {
         background-color: rgba(208, 214, 249, 0.22);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(12.5px);
         -webkit-backdrop-filter: blur(12.5px);
+        padding: 30px 120px 0 100px;
     }
     .navbar ul {
-        gap: 0px;
+        flex-direction: row;
+        gap: 30px;
+        padding: 0;
+        margin: 0;
+    }
+    .navbar ul li {
+        padding-bottom: 30px;
+    }
+    .navbar ul li a {
+        text-wrap: nowrap;
     }
     .nav-num {
-        display: none;
+        font-weight: 900;
+        font-size: 18px;
+        margin-right: 1px;
     }
 }
