--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -106,7 +106,7 @@
         padding: 30px 0 0 30px;
     }
     .navbar {
-        background-color: rgba(208, 214, 249, 0.22);
+        background: rgba(46, 52, 90, 0.164);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(12.5px);
         -webkit-backdrop-filter: blur(12.5px);
